feat(iam): P0安全债（目标域校验/审计补齐/step-up真实校验）+ 客户授权链打通
- 目标域校验（US-S1-08）：@RequirePermission 增 domainIdParam，拦截器逐域鉴权（fail-closed），103 处域端点标注（domain/support/ticket）
- 审计补齐：audit_log 增 point 列（platform/domain）；7 个 domain.* 动作码；域成员/角色变更事件落审计；修复 detail json 类型致审计从未落库的预存缺陷
- step-up 真实校验：validateStepUpToken 接通（含存量 updatePlatformRoles 同规修复）；token 落库 + CHECK 约束放行
- 客户授权链：selectEffectiveGrants 客户分支（customer_account→domain_customer→customer 角色）；canRoleOwnPermission shared 码档；工单详情/回复归属校验 + 提单入域校验（FR-05）+ 附件归属校验
- 测试：DomainScopedPermissionIntegrationTest(5)/StepUpTokenValidationTest(4)/AuditLogPointTest(2)/CustomerTicketPermissionIntegrationTest(4)/PermissionScopePolicyTests(8) 等
- 规划产物：08-11-group-role-management（prd/design/implement 收敛 + Q1-Q3 决策）、08-12-p0-cross-domain-security、08-13-customer-permission-chain