@@ -8,12 +8,16 @@ import com.uniondesk.iam.core.RequirePermission;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
 import org.springframework.core.annotation.AnnotatedElementUtils;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Component;
+import org.springframework.util.StringUtils;
 import org.springframework.web.method.HandlerMethod;
 import org.springframework.web.server.ResponseStatusException;
 import org.springframework.web.servlet.HandlerInterceptor;
+import org.springframework.web.servlet.HandlerMapping;
 
 @Component
 public class RequirePermissionInterceptor implements HandlerInterceptor {
@@ -35,10 +39,34 @@ public class RequirePermissionInterceptor implements HandlerInterceptor {
         }
         UserContext context = UserContextHolder.current()
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.UNAUTHORIZED, ErrorCodes.UNAUTHORIZED.message()));
-        if (iamService.hasAnyPermission(context, Arrays.asList(annotation.value()))) {
+        if (!StringUtils.hasText(annotation.domainIdParam())) {
+            if (iamService.hasAnyPermission(context, Arrays.asList(annotation.value()))) {
+                return true;
+            }
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, ErrorCodes.FORBIDDEN.message());
+        }
+        long targetDomainId = resolveTargetDomainId(request, annotation.domainIdParam());
+        boolean allowed = Arrays.stream(annotation.value())
+                .anyMatch(code -> iamService.hasPermissionForDomains(context, code, List.of(targetDomainId)));
+        if (allowed) {
             return true;
         }
         throw new ResponseStatusException(HttpStatus.FORBIDDEN, ErrorCodes.FORBIDDEN.message());
+    }
+
+    @SuppressWarnings("unchecked")
+    private long resolveTargetDomainId(HttpServletRequest request, String domainIdParam) {
+        Map<String, String> uriVariables = (Map<String, String>) request
+                .getAttribute(HandlerMapping.URI_TEMPLATE_VARIABLES_ATTRIBUTE);
+        String rawDomainId = uriVariables == null ? null : uriVariables.get(domainIdParam);
+        if (rawDomainId == null) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, ErrorCodes.FORBIDDEN.message());
+        }
+        try {
+            return Long.parseLong(rawDomainId);
+        } catch (NumberFormatException ex) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, ErrorCodes.FORBIDDEN.message());
+        }
     }
 
     private RequirePermission findRequirePermission(HandlerMethod handlerMethod) {
